Set up temporary canvas
Add a canvasble directive to the sketch
use link function inside this directive for mouse events
set the width and height of the temp_canvas

--- a/template.html
+++ b/template.html
@@ -122,17 +122,13 @@
 
         </form>
 
-        
-
-          
-
     </div>      
 
 
-
       <!-- Canvas -->
-      <div id="sketch">
+      <div id="sketch" canvasable>
         <canvas id="canvas"></canvas>
+        <canvas id="tmp_canvas"></canvas>
       </div>
 
   </div>    
