--- a/template.html
+++ b/template.html
@@ -48,7 +48,7 @@
   </div>
 
   <div id="clear-btn">
-    <button class="btn" type="button"  title="Clear Canvas">
+    <button ng-click="cls()" class="btn" type="button"  title="Clear Canvas">
         <div class="fa fa-trash"></div>
     </button>
 
@@ -111,7 +111,7 @@
                 <input type="radio" name="size" value="4">4</div>
         
         <div id="clear-btn-mobile">
-            <button class="btn" type="button"  title="Clear Canvas">
+            <button ng-click="cls()" class="btn" type="button"  title="Clear Canvas">
                 <div class="fa fa-trash"></div>
             </button>
 
