Undo Redo Tools

--- a/template.html
+++ b/template.html
@@ -38,10 +38,10 @@
 
   <div id="paint-undo-redo">
   	<div class="btn-group">
-  		<button id="undo-tool" class="btn" type="button" title="Undo">	
+  		<button ng-click="undo()" id="undo-tool" class="btn" type="button" title="Undo">	
   			<div class="fa fa-undo"></div>
 		</button>          
-		<button id="redo-tool" class="btn" type="button" title="Redo">	
+		<button ng-click="redo()" id="redo-tool" class="btn" type="button" title="Redo">	
   			<div class="fa fa-repeat"></div>
 		</button>          
   	</div>
