Download Image drawn in paint
use link.href and link.download properties, then link.click()
Change scope:false to scope:true in the child directive, otherwise no need of this.noUndo() functions

--- a/template.html
+++ b/template.html
@@ -52,7 +52,7 @@
         <div class="fa fa-trash"></div>
     </button>
 
-    <button class="btn" type="button"  title="Download">
+    <button ng-click="download()" class="btn" type="button"  title="Download">
         <div class="fa fa-download"></div>
     </button>
   </div>  
@@ -115,7 +115,7 @@
                 <div class="fa fa-trash"></div>
             </button>
 
-            <button class="btn" type="button"  title="Download">
+            <button ng-click="download()" class="btn" type="button"  title="Download">
                 <div class="fa fa-download"></div>
             </button>
         </div>      
