--- a/template.html
+++ b/template.html
@@ -129,7 +129,10 @@
       <div id="sketch" canvasable>
         <canvas id="canvas"></canvas>
         <canvas id="tmp_canvas"></canvas>
+        <!-- An area to drag to resize the canvas -->
+        <div class="resize-div"></div>
       </div>
+
 
   </div>    
 
